--- a/site.css
+++ b/site.css
@@ -111,13 +111,13 @@ nav.header-nav-list .header-nav-item:nth-child(2) {
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem;
   padding: 0.5rem 1rem 0 2.5rem;
-  background: url('/s/down-chevron-svgrepo-com.svg') no-repeat;
+  background: url('https://static1.squarespace.com/static/626d3a53496e6707a6e79662/t/62a9241635146b5715f1a985/1655251990695/down-chevron-svgrepo-com.svg') no-repeat;
   background-position: 8% 56%;
   background-size: 15%;
 }
 
 nav.header-nav-list .header-nav-item:nth-child(2):hover {
-  background: #035438 url('/s/up-chevron-svgrepo-com.svg') no-repeat;
+  background: #035438 url('https://static1.squarespace.com/static/626d3a53496e6707a6e79662/t/62a9241ccd6cb0169938138f/1655251997022/up-chevron-svgrepo-com.svg') no-repeat;
   background-position: 8% 56%;
   background-size: 15%;
 }
@@ -125,9 +125,8 @@ nav.header-nav-list .header-nav-item:nth-child(2):hover a {
   color: #fff;
 }
 nav.header-nav-list .header-nav-item:nth-child(2) a:hover span.header-nav-folder-item-content {
-  background-color: #a142ff;
+  color: #d2ff4b;
   display: inline-block;
-  padding-left: 0.1rem;
 }
 
 
@@ -160,9 +159,28 @@ nav.header-nav-list .header-nav-item:nth-child(2) a:hover span.header-nav-folder
 
 /* END MAIN MENU  */
 
+/* Begin forms */
+label.title, 
+span.caption-text,
+input.button.sqs-system-button.sqs-editable-button.sqs-button-element--primary,
+.form-wrapper .field-list .field .field-element {
+  color: #025439 !important;
+}
+
+
+input.button.sqs-system-button.sqs-editable-button.sqs-button-element--primary {
+  border-radius: 1em;
+}
+
+input.button.sqs-system-button.sqs-editable-button.sqs-button-element--primary:hover {
+  color: #d2ff4b !important;
+}
+
 
 /* BEGIN MISC */
 .sqs-block-image .design-layout-stack .image-card-wrapper .image-subtitle-wrapper div.image-subtitle.sqs-dynamic-text {
   margin-top: 2%;
 }
 /* END MISC */
+
+
